# fastapi-poc

./: .gitignore  README.md  pyproject.toml  tox.ini
scripts/: coverage.sh
src/: config.py  database.py  logger.py  main.py  models.py  schemas.py
src/routers/: __init__.py  cart.py
src/schemas/: __init__.py  schemas.py
tests/: __init__.py  cart_tests.py
