[tool.poetry]
name = "fastapi-poc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_poc"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = "^2.0.19"
pydantic = "<2.0.0"
pyfiglet = "^0.8.post1"
autopep8 = "^2.0.2"
isort = "^5.12.0"
flake8 = "6.0.0"
coverage = "^7.2.7"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
